# Spectral

./: CMakeLists.txt  CMakeLists.txt~  Doxyconf  lista
Spectral_Proj.xcodeproj/: project.pbxproj
html/: AMPFunctionsA_8cpp.html  AMPFunctionsA_8cpp__incl.map  AMPFunctionsA_8cpp__incl.md5  AMPFunctionsA_8cpp_a41c135e6e4fe271a9a29767a4c6f1c6f_cgraph.md5  AMPFunctionsA_8cpp_a41c135e6e4fe271a9a29767a4c6f1c6f_icgraph.md5  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_cgraph.map  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_cgraph.md5  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_icgraph.map  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_icgraph.md5  AMPFunctionsA_8cpp_aab78de0fba789fc3957beb326e23bccf_cgraph.md5  AMPFunctionsA_8cpp_aab78de0fba789fc3957beb326e23bccf_icgraph.md5  AMPFunctionsA_8cpp_ab635cf93b5ea7ceaf1eabb12082a67e4_cgraph.map  AMPFunctionsA_8cpp_ab635cf93b5ea7ceaf1eabb12082a67e4_cgraph.md5  AMPFunctionsA_8cpp_ab635cf93b5ea7ceaf1eabb12082a67e4_icgraph.md5  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_cgraph.map  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_cgraph.md5  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_icgraph.map  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_icgraph.md5  AMPFunctionsA_8cpp_source.html  ASPFunctions_8cpp.html  ASPFunctions_8cpp__incl.map  ASPFunctions_8cpp__incl.md5  ASPFunctions_8cpp_a0c0a3f69771d7f20eb1b7e5dee9b1c6c_cgraph.md5  ASPFunctions_8cpp_a0c0a3f69771d7f20eb1b7e5dee9b1c6c_icgraph.md5  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_cgraph.map  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_cgraph.md5  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_icgraph.map  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_icgraph.md5  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_cgraph.map  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_cgraph.md5  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_icgraph.map  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_icgraph.md5  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_cgraph.map  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_cgraph.md5  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_icgraph.map  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_icgraph.md5  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_cgraph.map  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_cgraph.md5  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_icgraph.map  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_icgraph.md5  (+1430 more)
include/: Funcoes_c.h  GeProb.hpp  Geo.h  Geo.h~  Hexahedral.h  Hexahedral.h~  Linear.h  MyOptions.h  MyTrilinos.h  Particao.h  PhElem.hpp  Quadrilateral.h  Stdel.h  Tetrahedral.h  Triangle.h  Tstruct.h  spectral.h  spectral.h~  virtual.H
lib/: libSpectral.dylib
pdflatex/: AMPFunctionsA_8cpp.tex  AMPFunctionsA_8cpp__incl.md5  AMPFunctionsA_8cpp_a41c135e6e4fe271a9a29767a4c6f1c6f_cgraph.md5  AMPFunctionsA_8cpp_a41c135e6e4fe271a9a29767a4c6f1c6f_icgraph.md5  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_cgraph.md5  AMPFunctionsA_8cpp_a5b461cef274da05057a244282b32d382_icgraph.md5  AMPFunctionsA_8cpp_aab78de0fba789fc3957beb326e23bccf_cgraph.md5  AMPFunctionsA_8cpp_aab78de0fba789fc3957beb326e23bccf_icgraph.md5  AMPFunctionsA_8cpp_ab635cf93b5ea7ceaf1eabb12082a67e4_cgraph.md5  AMPFunctionsA_8cpp_ab635cf93b5ea7ceaf1eabb12082a67e4_icgraph.md5  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_cgraph.md5  AMPFunctionsA_8cpp_aca1ae8962fa119047bc9929701f23f46_icgraph.md5  ASPFunctions_8cpp.tex  ASPFunctions_8cpp__incl.md5  ASPFunctions_8cpp_a0c0a3f69771d7f20eb1b7e5dee9b1c6c_cgraph.md5  ASPFunctions_8cpp_a0c0a3f69771d7f20eb1b7e5dee9b1c6c_icgraph.md5  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_cgraph.md5  ASPFunctions_8cpp_a36e194a1b28057104e85e101e96dad23_icgraph.md5  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_cgraph.md5  ASPFunctions_8cpp_a4dbbd2eb74a54c3f5f3f3b6198f11b2b_icgraph.md5  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_cgraph.md5  ASPFunctions_8cpp_a57d673f8d6833fb7a7aced326df10ca9_icgraph.md5  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_cgraph.md5  ASPFunctions_8cpp_a9e9ed29cfa75dbf727a2b4805a29020d_icgraph.md5  ASPFunctions_8cpp_ab7da11871b564326d332e2b2c6c14b03_cgraph.md5  ASPFunctions_8cpp_ab7da11871b564326d332e2b2c6c14b03_icgraph.md5  ASPFunctions_8cpp_ac3f705ccfdcb247014c373929aa4b358_cgraph.md5  ASPFunctions_8cpp_ac3f705ccfdcb247014c373929aa4b358_icgraph.md5  ASPFunctions_8cpp_ad2b054769d09e23f58c382461a33fda5_icgraph.md5  ASPFunctions_8cpp_adbb9227db329a95b79f56bc1bc599a36_icgraph.md5  DG_8cpp.tex  (+662 more)
src/DG_25/: CMakeLists.txt  DG_EI_Header.h  DG_EI_Inflow.cpp  DG_EI_Inflow_b.cpp  DG_EI_Interior_b.cpp  DG_Elem.cpp  DG_Iterate.cpp  DG_MVRA.cpp  DG_Prob.cpp  DG_eco.cpp  Fluids.cpp  Transfere_rst.cpp  main.cpp
src/Elastodinamica/: CMakeLists.txt  CMakeLists.txt~  ED_Prob.h  ED_preamble.cpp  Elastodinamica2D.cpp  Elastostatica.cpp
src/Stdel/: AMPFunctionsA.cpp  ASPFunctions.cpp  CMakeLists.txt  CMakeLists.txt~  Funcoes_globais.cpp  Hexahedral.cpp  Linear.cpp  Quadrilateral.cpp  Stdel.cpp  Tetrahedral.cpp  Triangle.cpp  lista  lista~
(+62 files in other folders)
